# waitforsocket

./: .gitignore  LICENSE  Makefile.in  README.markdown  README.md  build.zig  build.zig.zon  configure  flake.nix  main.c  sockets.c  stack.yaml  waitforsocket.cabal  waitforsocket.go  waitforsocket.h
.github/workflows/: haskell.yml  nix-build.yml  periodic.yml
app/: Main.hs
nix/: sources.json
src/: Waitforsocket.hs  main.zig  root.zig
test/: Spec.hs
