name:                waitforsocket
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dustin/waitforsocket#readme
license:             BSD3
license-file:        LICENSE
author:              Dustin Sallings
maintainer:          dustin@spy.net
copyright:           2017 Dustin Sallings
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Waitforsocket
  build-depends:       base >= 4.7 && < 5
                     , async, time, network, optparse-applicative, HTTP
                     , attoparsec, text
  default-language:    Haskell2010
  ghc-options:         -Wall

executable waitforsocket-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, optparse-applicative, mtl, async, hslogger
                     , safe-exceptions
                     , unbounded-delays
                     , network, HTTP
                     , waitforsocket
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite waitforsocket-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , waitforsocket
                     , tasty, tasty-quickcheck
                     , QuickCheck
                     , network
                     , attoparsec, text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dustin/waitforsocket
